# Ai-201-PWR

./: .env_example  .gitignore  AGENT_SDK_SAMPLE_QUESTIONS.md  GPT-4.1_Prompting_Techniques.MD  Hooks.md  MARKDOWN_SAMPLE_QUESTIONS.md  PROMPT_ENG_SAMPLE_QUIZ.md  UV_README.md  hello.py  pyproject.toml
src/: step_01_open_router.py  step_02_simple_sync_agent_using_lite_llm.py  step_03_simple_async_agent_using_lite_llm.py  step_04_agent_using_tools.py  step_04_agents_using_tools.py  step_05_agent_handoffs.py  step_06_agent_with_structured_output.py  step_09_streaming_agent.py  step_12_agents_with_guardrails.py  step_13_agent_with_context.py  test.py
src/Important Markdowns/: GOOGLE_PROMPT_ENG_GUIDE.md  GPT-4.1_Prompting_Techniques.MD  INTRO_TO_HTTP_REST_JSON-RCP_MCP.md  MARKDOWN_SAMPLE_QUESTIONS.md
src/OpenAIAgentSDK/: open_router_response.json  step_03_simple_async_agent_using_lite_llm.py  step_04_agent_using_tools.py  step_07_agents_handoffs_example.py  step_08_chainlit_agent.py  step_10_streaming_with_function_calling_agent.py  step_11_streaming_chainlit_agent.py  step_12_agents_with_guardrails.py  step_14_agent_with_dynamic_instructions.py  step_15_lifecycle_hooks.py  structured_output_response.json
