[project]
name = "ai-201-pwr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[litellm]>=0.0.13",
    "litellm==1.67.1",
]
[project.scripts]
hello = "hello:main"
step_01 = "src.step_01_open_router:main"
step_02 = "src.step_02_simple_sync_agent_using_lite_llm:main"
step_03 = "src.step_03_simple_async_agent_using_lite_llm:main_wrapper"
step_04 = "src.step_04_agents_using_tools:main_wrapper"
step_05 = "src.step_05_agent_handoffs:main_wrapper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
